Add SEO tracker system, product image mapping, and publishing guides
- Add SEO backlink tracker module with admin UI and cron job
- Add initial backlink data for IndiaMART and ThaiTrade platforms
- Generate multilingual product image filename mapping (11 languages)
- Add product image naming guide and analysis documentation
- Add platform publishing guides for IndiaMART and ThaiTrade
- Add image filename generation script with Alt text mapping

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,13 @@
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "outputDirectory": ".next",
+  "crons": [
+    {
+      "path": "/api/seo-tracker/cron",
+      "schedule": "0 0 * * 0"
+    }
+  ]
 }
 
