--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
     "critters": "^0.0.23",
+    "lucide-react": "^0.469.0",
     "next": "16.1.1",
     "nodemailer": "^7.0.12",
     "react": "19.2.3",
+    "react-countup": "^6.5.2",
     "react-dom": "19.2.3",
     "resend": "^4.0.0"
   },
