--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "@vercel/analytics": "^1.6.1",
     "critters": "^0.0.23",
     "lucide-react": "^0.469.0",
