--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react": "19.2.3",
     "react-countup": "^6.5.2",
     "react-dom": "19.2.3",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.1.0",
